# disco_chat

./: .gitignore  Dockerfile  botfaq.py  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  disco_gptchat.py  dumpsqlite.py  faq.py  faqorm.py  faqs.db  file.txt  pyproject.toml  readme.md  runbot.bat  runbot.sh
.github/: workflows.yml
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
attic/: alchemyfaqs.py  botfaq.py  disco_gptchat.py  faqorm.py  file.txt  mydatabase.db  setupdb.py  testslqlalchmeysqlite.py  testsqlachemyfastapi.py  testsqlite.py
disco_bot/: AIChatBot.py  AIChatbotManager.py  ai.py  main.py
tests/: test.csv  test.json
